glimagesink: fix caps leak

https://bugzilla.gnome.org/show_bug.cgi?id=746541